# ME700-Assignment-2

./: README.md  assignment_2_genAIuse.txt  pyproject.toml
.github/workflows/: prerun_tests.yml  python-package.yml
DSM/: DSM_functions.py  DSM_main.py
src/DSM/: ECL_main.py
tests/: test_DSM.py
tutorial/: DSM_tutorial.ipynb  DSM_tutorial.md  DSM_tutorial.py  DSM_tutorial.txt
