[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ME700-Assignment-1-Part-1"
version = "0.0.0"
authors = [
  { name="Alexander Kochling", email="akoch23@bu.edu" },
]
description = "newtons method solver workflow"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.10.0",
    "numpy==1.26.4",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/akoch23/ME700-Assignment-1-Part-1/tree/main"
